--- a/scss/abstracts/_utilities.scss
+++ b/scss/abstracts/_utilities.scss
@@ -61,6 +61,9 @@
 .primary-900{
     background-color: $primary-900;
 }
+.primary-950{
+    background-color: $primary-950;
+}
 .bg-secondary-col{
     //change bg to secondary col
     background-color: $secondary;
