--- a/scss/layouts/_layouts-dir.scss
+++ b/scss/layouts/_layouts-dir.scss
@@ -2,6 +2,7 @@
 @import "sections/footer";
 @import "sections/hero";
 @import "sections/dividers";
+@import "sections/gallery";
 @import "pages/login";
 @import "pages/gallery";
 @import "pages/gift-list";
