--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -1,11 +1,4 @@
-.hero-img-card{
-    padding: 1rem;
-    background-color: hsla(0, 0%, 96%, 0.358);
-    backdrop-filter: blur(5px);
-    width: fit-content;
-    max-width: 500px;
 
-}
 
 //image card with glass border
 .img-card{
@@ -19,6 +12,7 @@
 .std-card{
     padding: $spacer-3;
     border: 2px solid $primary;
+    border-radius: $border-radius;
 }
 
 //event card with header images and date information
@@ -35,6 +29,7 @@
    text-align: center;
    padding: $spacer-3;
    background-color: $primary-900;
+   border-radius: $border-radius;
    h2{
     font-size: $fs-200;
     font-weight: 300;
@@ -128,4 +123,56 @@
         max-height: auto;
     }
 
+}
+
+///profile cards ith a decorative border and center card
+.profile-card{
+    padding: $spacer-2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: $spacer-2;
+}
+.profile-card-img img{
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+    border-radius: 100%;
+}
+
+.profile-card-body{
+    text-align: center;
+    h3{
+        font-weight: 300
+    }
+    font-weight: 200
+
+}
+
+.center-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    place-self: center;
+    height: 80%;
+
+    img{
+        opacity: .8;
+    }
+
+}
+.left, .right{
+    font-family: $ff-handwriting;
+    color: $primary;
+    font-size: $fs-300;
+    
+}
+@media(min-width: $md){
+    .left{
+        align-self: start;
+    }
+    .right{
+        align-self: end;
+    }
 }
