--- a/scss/components/_cookie-policy.scss
+++ b/scss/components/_cookie-policy.scss
@@ -19,7 +19,6 @@
     }
 
     .btn-close{
-      height: 1rem;
       background-size: 1.5rem;
     }
 }
@@ -51,6 +50,14 @@
       position:absolute ;
       top: 1rem;
       right: 1rem;
-      height: 20px;
+      height: 40px;
+      width: 40px;
+      padding: $spacer-1;
+      svg{
+        height: 100%;
+        path{
+          fill: $primary;
+        }
+      }
   }
   
