--- a/scss/layouts/sections/_hero.scss
+++ b/scss/layouts/sections/_hero.scss
@@ -1,8 +1,7 @@
-.hero{
-    padding-top: 84px;
+.hero {
     min-height: 90vh;
     display: grid;
-    place-items: center;
+    grid-template-rows: auto 1fr;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -10,23 +9,98 @@
 }
 
 
-.hero-title{
-    h1{
+
+.hero-img-card {
+    max-height: 50%;
+    place-self: center;
+    width: 50%;
+    overflow: auto;
+}
+
+.hero-img-card img {
+    height: 100%;
+    max-height: 100%;
+    object-fit: cover;
+
+}
+.hero-card-img{
+    border: 15px solid red;
+    border-radius: $border-radius;
+    border-color: hsla(0, 0%, 100%, 0.358);
+    backdrop-filter: blur(4px);
+    height: 100%;
+    max-height: 350px;
+    place-self: center;
+    z-index: 0;
+}
+.hero-title {
+    h1 {
         font-size: $fs-250;
-        
-        
+        font-weight: 400;
+        color: $primary-900;
+        text-shadow: 2px 2px hsla(0, 0%, 0%, 0.25);
     }
-    p{
+
+    p {
         font-size: $fs-150;
     }
 }
-.hero-container{
+
+.hero-container {
+    margin-top: $spacer-2;
+    width: 100%;
     display: grid;
     gap: $spacer-2;
     justify-content: center;
+    grid-template-columns: 1fr;
 
 }
-.index-hero{
+
+.index-hero {
     background-image: url("../../assets/img/hero/index-hero.jpg");
 
+}
+.hero-title{
+    place-self: center;
+}
+.hero-footer {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: $spacer-1;
+    opacity: .7;
+    padding-inline: $spacer-2;
+    font-size: $fs-125;
+    font-weight: 300;
+    padding-bottom: $spacer-1;
+    place-self: end center;
+    width: 95%;
+
+    &::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 3px;
+        border-radius: $border-radius-3;
+        width: 100%;
+        background-color: hsla(0, 0%, 100%, 0.5);
+        backdrop-filter: blur(4px);
+    }
+
+}
+
+@media(min-width:$md) {
+    .hero-img-card {
+        max-height: 600px;
+
+
+    }
+
+    .hero-footer {
+        flex-direction: row;
+        justify-content: space-between;
+
+    }
 }
