--- a/scss/layouts/sections/_nav.scss
+++ b/scss/layouts/sections/_nav.scss
@@ -1,18 +1,12 @@
 .nav-container {
     padding: 1rem 2rem;
-    position: fixed;
-    left: 0;
-    right: 0;
-    z-index: 1;
-    background-color: hsla(0, 0%, 100%, 0.5);
-    
-    backdrop-filter: blur(5px);
-    transition: background-color 300ms ease,  border-bottom 300ms ease;
-    border-bottom: none;
+    z-index: 100;
+    //position: relative;
 }
 
 .nav-bar{ //inner nav bar
     display: flex;
+   
     justify-content: space-between;
     align-items: center;
 }
@@ -20,10 +14,29 @@
 .nav-brand{
     font-size: $fs-200;
     font-weight: 400;
-    
+    font-family: $ff-handwriting;
+    opacity: 1;
+    transition: opacity 600ms ease;
     a{
         text-decoration: none;
-        color: black;
+        color: $primary-950;
+        span{
+            font-size: 3rem;
+            margin-inline: $spacer-2;
+        }
+    }
+}
+
+.nav-brand-sm{
+    font-size: $fs-200;
+    font-weight: 400;
+    font-family: $ff-handwriting;
+    a{
+        text-decoration: none;
+        span{
+            font-size: 3rem;
+            margin-inline: $spacer-2;
+        }
     }
 }
 .nav-links {
@@ -42,31 +55,28 @@
     li {
         list-style-type: none;
         
-        a{
-            text-decoration: none;
-            padding: $spacer-2;
-            width: 100%;
-            text-align: center;
-            font-size: $fs-125;
-           
-            margin-block: $spacer-2;
-            opacity: 0;
-            animation: navopen 300ms ease-in-out forwards;
-            &:hover, &:focus{
-                text-decoration: underline;
-            }
+
+    }
+    a{
+        text-decoration: none;
+        padding: $spacer-2;
+        width: 100%;
+        text-align: center;
+        font-size: $fs-125;
+        color: $primary;
+        margin-block: $spacer-2;
+        animation: navopen 300ms ease-in-out forwards;
+        &:hover, &:focus{
+            text-decoration: underline;
         }
     }
-
 }
 //settings for active menu
 
 .nav-links[data-state="opened"]{
     display: block;
-    a{
-        opacity: 1;
-        animation: navopen 1s ease-in-out forwards;
-    }
+    transform: translateX(0%);
+
     animation: navopen 400ms ease-in-out forwards;
 }
 
@@ -87,40 +97,13 @@
 
 @keyframes navclose{
     100%{opacity:0;}
-    0%{opacity:1; }
+    0%{opacity:1;}
 }
 @keyframes navopen{
-    0%{opacity:0;}
+    0%{opacity:0; }
     100%{opacity:1;}
 }
-////Nav scrolled settings
 
-.nav-scrolled{
-    background-color: $primary-950;
-    transition: background-color 300ms ease border-bottom 300ms ease;
-    border-bottom: 2px solid $primary;
-    .nav-brand{
-        opacity: 1;
-        a{
-            color: $primary;
-        }
-    }
-
-    .nav-btn {
-
-        cursor: pointer;
-    
-        .hamburger {
-            //svg
-            fill: $primary;
-        }
-    }
-    .nav-links{
-        li a{
-            color: $primary;
-        }
-    }
-}
 
 /////////////////////////////////////////////////Nav Button///////////////////
 //nav button settings
@@ -133,7 +116,7 @@
 
     .hamburger {
         //svg
-        fill: black;
+        fill: $primary-900;
     }
 }
 
@@ -148,7 +131,7 @@
 
 //once active these styles apply
 [aria-expanded="true"] .line {
-    //hanburger lines
+    //hamburger lines
     transition:
         transform 400ms ease-out,
         rotate 400ms ease-out 400ms,
@@ -175,6 +158,7 @@
 @media(min-width:$x-lg){
     .nav-bar{ //inner nav bar
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
         align-items: center;
     }
@@ -187,18 +171,82 @@
         flex-direction: row;
         justify-content: space-between;
         width: 80%;
-        margin: 0;
-        padding: 0;
-        position: relative;
+        margin: 0 auto;
+        position: static;
         top: 0;
-        background: none;
+        padding: $spacer-2;
+        background: rgba(255, 255, 255, 0.20);
+        backdrop-filter: blur(4px);
         border: none;
-       li a{
-            opacity: 1;
-            color: black;
+        border-radius: $border-radius;
+        border-bottom: 1px solid transparent;
+        a{
+            margin-block: 0;
+            color: $primary-900;
         }
+      
     }
     .nav-links[data-state="closed"] {
         display: flex;
     }
+    .nav-container{
+        height: 150px;
+    }
+    
+.nav-links[data-nav="scrolled"]{
+    background-color: $primary-950;
+    position: fixed;
+    top: -63px;
+    width: 100%;
+    padding-inline: $spacer-4;
+    animation: nav-slide 400ms ease forwards;
+    border-radius: 0;
+    border-bottom: 1px solid $primary;
+   a{
+       color: $primary;
+   }
+}
+.nav-links[data-nav="closing"]{
+    width: 100%;
+    background-color: $primary-950;
+    position: fixed;
+    top: 0;
+    border-radius: 0;
+    padding-inline: $spacer-3;
+    animation: nav-closing 400ms ease forwards;
+    a{
+        color: $primary-900;
+        opacity: 0;
+    }
+}
+.nav-links[data-nav="ready"]{
+    
+   
+
+    animation: nav-ready 400ms ease-out forwards;
+   a{
+       
+       opacity: 0;
+   }
+}
+}
+////Nav scrolled settings
+@media(min-width:$md){
+
+}
+//animate menu slide down
+@keyframes nav-slide{
+    0%{top:-63px;}
+    100%{top:0;}
+}
+//animate menu slide down
+@keyframes nav-closing{
+    0%{top:0; color:$primary;}
+    100%{top: -63px; color: $primary-900;}
+}
+
+//animate menu slide down
+@keyframes nav-ready{
+    0%{opacity: 0;}
+    100%{opacity: 1;}
 }
