--- a/scss/layouts/_layouts-dir.scss
+++ b/scss/layouts/_layouts-dir.scss
@@ -3,6 +3,7 @@
 @import "sections/hero";
 @import "sections/dividers";
 @import "sections/gallery";
+@import "sections/header";
 @import "pages/login";
 @import "pages/gallery";
 @import "pages/gift-list";
