--- a/scss/abstracts/_base.scss
+++ b/scss/abstracts/_base.scss
@@ -1,7 +1,7 @@
 body{
-     display: flex;
-     flex-direction: column;
-    justify-content: space-between;
+    //  display: flex;
+    //  flex-direction: column;
+    // justify-content: space-between;
     min-height: -moz-available;
     min-height: -webkit-fill-available;
     min-height: stretch;
