--- a/scss/abstracts/_typography.scss
+++ b/scss/abstracts/_typography.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Glory:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,800&display=swap');
-$font-family-sans-serif: 'Glory', sans-serif;
-$ff-handwriting: 'Glory', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Glory:wght@100;200;300;400;500;600;700;800&family=Jua&display=swap');
+$font-family-sans-serif: 'Jua', sans-serif;
+$ff-secondary: 'Glory', sans-serif;
 body{
-    font-family: $font-family-sans-serif;
+    font-family: $ff-secondary;
 }
 
 .font-emphasis{
@@ -35,7 +35,8 @@ h2{
     font-size: $fs-200;
 }
 h1, h2, h3, h4{
-    font-family: $ff-handwriting;
+    font-family: $font-family-sans-serif;
+    color: $primary;
 }
 
 .section-title{
