--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,11 +1,11 @@
 //Colours
-$primary:       hsl(25, 100%, 40%);
-$secondary:     #B099BF;
-$tertiary-col:  #4D4D4D;
+$primary:       hsl(16, 24%, 54%);
+$secondary:     #F2F2F2;
+$tertiary-col:  #71736A;
 $white: #f2f2;
 $grey-600: hsl(0, 0%, 54%);
-$hue:25;
-$saturation: 100%;
+$hue:16;
+$saturation: 24%;
 $primary-500:hsl($hue, $saturation, 50%);
 $primary-600:hsl($hue, $saturation, 60%);
 $primary-700:hsl($hue, $saturation, 70%);
