--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -9,170 +9,63 @@
 }
 //standard card with basic padding and a simple border
 
-.std-card{
+.std-card{ //use for making a card section
     padding: $spacer-3;
     border: 2px solid $primary;
     border-radius: $border-radius;
 }
 
-//event card with header images and date information
-//set up as a section with a full width bg image
-.event-card-section{
-    background-image: url("../../assets/img/event-card/event-card-bg.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding-block: $spacer-4;
-}
-.event-card{
-   border: 2px solid $primary;
-   text-align: center;
-   padding: $spacer-3;
-   background-color: $primary-900;
-   border-radius: $border-radius;
-   h2{
-    font-size: $fs-200;
-    font-weight: 300;
-   }
-   p{
-    font-size: $fs-125;
-    font-weight: 100;
-   }
-}
 
-.event-card-images{
-    display: flex;
-    flex-direction: column;
-    gap: $spacer-2;
-    margin-bottom: $spacer-5;
-    @media(min-width:$md){
-        flex-direction: row;
-        justify-content: center;
-        gap: $spacer-3;
-    }
-    .img-card{
-        max-height: 500px;
-        max-width: 500px;
-        img{
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
+
+.card{ //card with an icon on top and a block of text
+    border: 2px solid $tertiary-col;
+    border-radius: $border-radius-2;
+    padding: $spacer-3;
+    position: relative;
+    margin-block: $spacer-2;
+}
+.card-icon{
+    position: absolute;
+    top: -25px;
+    left: 0;
+    right: 0;
+    margin-inline: auto;
+    padding: .5rem;
+    height: 50px;
+    width: 50px;
+    display: grid;
+    place-items: center;
+    background-color: $tertiary-col;
+    border-radius: 100%;
+    svg{
+        height: 100%;
+        path{
+            fill: red;
         }
     }
 }
-
-.venue-card{
-    padding-block: $spacer-7;
-    display: grid;
-    gap: $spacer-3;
-    @media(min-width:$md){
-        grid-template-columns: 1fr 1fr;
-    }
-    h2{
+.card-body{
+    h3{
         color: $primary;
     }
-
-
-}
-
-.venue-text{
-    padding: $spacer-4;
-}
-.footer-img-card{
-    width: 100%;
-    object-fit: cover;
-    height: 50vh;
-}
-.day-card{
-    text-align: left;
-}
-.day-card-body{
-    display: grid;
-    gap: $spacer-3;
-    @media(min-width: $md){
-        grid-template-columns: 1fr 1fr;
+    p{
+        font-weight: 300;
     }
 }
-
-
-///gift list
-.gift-item-card{
-    padding: $spacer-3;
-    border: 2px solid $primary;
-    display: grid;
-    gap: $spacer-2;
-    max-width: 600px;
-    
-    @media(min-width:$md){
-        grid-template-columns: auto 250px;
-        
-    }
-}
-
-//short intro card to the couples story
-.story-intro{
-    max-height: 25ch;
-    overflow: hidden;
-}
-@supports(-webkit-line-clamp: 5){
-    .story-intro{
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 5;
-        overflow: hidden;
-        max-height: auto;
-    }
-
-}
-
-///profile cards ith a decorative border and center card
-.profile-card{
+///staff cards
+.staff-card{
     padding: $spacer-2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: $spacer-2;
+
+
 }
-.profile-card-img img{
+.staff-card-header img{
     height: 200px;
     width: 200px;
     object-fit: cover;
+    object-position: top;
     border-radius: 100%;
 }
-
-.profile-card-body{
-    text-align: center;
-    h3{
-        font-weight: 300
-    }
-    font-weight: 200
-
-}
-
-.center-card{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    place-self: center;
-    height: 80%;
-
-    img{
-        opacity: .8;
-    }
-
-}
-.left, .right{
-    font-family: $ff-handwriting;
-    color: $primary;
-    font-size: $fs-300;
-    
-}
-@media(min-width: $md){
-    .left{
-        align-self: start;
-    }
-    .right{
-        align-self: end;
-    }
+.staff-card-name{
+    font-size: $fs-125;
+    font-family: $font-family-sans-serif;
 }
