--- a/scss/layouts/grid/_cssgrid.scss
+++ b/scss/layouts/grid/_cssgrid.scss
@@ -14,7 +14,8 @@
 }
 .grid-row-3col{//grid row with 3 columns of equal width
     display: grid;
-    gap: $spacer-2;
+    gap: $spacer-3;
+    place-items: center;
     @media(min-width:$md){
         grid-template-columns: repeat(3, 1fr);
         grid-auto-rows: minmax(100px, auto);
