--- a/scss/layouts/sections/_footer.scss
+++ b/scss/layouts/sections/_footer.scss
@@ -1,15 +1,44 @@
-.footer{
-    padding-block: $spacer-3;
-
-    background-color: $primary-700;
+footer{
+    padding-top: $spacer-3;
+    border-top: 2px solid $primary;
+    ul{
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+    }
 }
 
 .footer-container{
+    img{
+        max-width: 150px;
+       
+    }
     display: flex;
     flex-direction: column;
     gap: $spacer-2;
     @media(min-width: $md){
         flex-direction: row;
+        justify-content: space-between;
+    }
+}
+.footer-address{
+    p{
+        line-height: 1.25;
+    }
+}
+
+.footer-base{
+    background-color: $primary;
+    padding: $spacer-2;
+    color: $secondary;
+    a{
+        color: $secondary;
+    }
+    
+}
+@media(min-width: $md){
+    .footer-base .container{
+        display: flex;
         justify-content: space-between;
     }
 }
