--- a/scss/layouts/sections/_nav.scss
+++ b/scss/layouts/sections/_nav.scss
@@ -1,7 +1,7 @@
 .nav-container {
-    padding: 1rem 2rem;
+    padding: 1rem;
     z-index: 100;
-    //position: relative;
+    border-bottom: 2px solid $primary;
 }
 
 .nav-bar{ //inner nav bar
@@ -14,9 +14,12 @@
 .nav-brand{
     font-size: $fs-200;
     font-weight: 400;
-    font-family: $ff-handwriting;
     opacity: 1;
     transition: opacity 600ms ease;
+    max-height: 200px;
+    img{
+        max-height: 80px;
+    }
     a{
         text-decoration: none;
         color: $primary-950;
@@ -27,30 +30,19 @@
     }
 }
 
-.nav-brand-sm{
-    font-size: $fs-200;
-    font-weight: 400;
-    font-family: $ff-handwriting;
-    a{
-        text-decoration: none;
-        span{
-            font-size: 3rem;
-            margin-inline: $spacer-2;
-        }
-    }
-}
+
 .nav-links {
     //nav bar links
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 86px;
+    top: 166px;
     left: 0;
     right: 0;
     margin: 0;
     padding: 0;
     padding: $spacer-3;
-    background-color: $primary-900;
+    background-color: #fff;
     border-bottom: 2px solid $primary;
     li {
         list-style-type: none;
@@ -116,7 +108,7 @@
 
     .hamburger {
         //svg
-        fill: $primary-900;
+        fill: $primary;
     }
 }
 
@@ -158,7 +150,6 @@
 @media(min-width:$x-lg){
     .nav-bar{ //inner nav bar
         display: flex;
-        flex-direction: column;
         justify-content: space-between;
         align-items: center;
     }
@@ -173,80 +164,23 @@
         width: 80%;
         margin: 0 auto;
         position: static;
-        top: 0;
         padding: $spacer-2;
-        background: rgba(255, 255, 255, 0.20);
+        background: #fff;
         backdrop-filter: blur(4px);
         border: none;
         border-radius: $border-radius;
         border-bottom: 1px solid transparent;
         a{
             margin-block: 0;
-            color: $primary-900;
+            color: $primary;
         }
       
     }
     .nav-links[data-state="closed"] {
         display: flex;
     }
-    .nav-container{
-        height: 150px;
-    }
+
     
-.nav-links[data-nav="scrolled"]{
-    background-color: $primary-950;
-    position: fixed;
-    top: -63px;
-    width: 100%;
-    padding-inline: $spacer-4;
-    animation: nav-slide 400ms ease forwards;
-    border-radius: 0;
-    border-bottom: 1px solid $primary;
-   a{
-       color: $primary;
-   }
-}
-.nav-links[data-nav="closing"]{
-    width: 100%;
-    background-color: $primary-950;
-    position: fixed;
-    top: 0;
-    border-radius: 0;
-    padding-inline: $spacer-3;
-    animation: nav-closing 400ms ease forwards;
-    a{
-        color: $primary-900;
-        opacity: 0;
-    }
-}
-.nav-links[data-nav="ready"]{
-    
-   
 
-    animation: nav-ready 400ms ease-out forwards;
-   a{
-       
-       opacity: 0;
-   }
-}
-}
-////Nav scrolled settings
-@media(min-width:$md){
 
-}
-//animate menu slide down
-@keyframes nav-slide{
-    0%{top:-63px;}
-    100%{top:0;}
-}
-//animate menu slide down
-@keyframes nav-closing{
-    0%{top:0; color:$primary;}
-    100%{top: -63px; color: $primary-900;}
-}
-
-//animate menu slide down
-@keyframes nav-ready{
-    0%{opacity: 0;}
-    100%{opacity: 1;}
 }
