--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,7 +51,7 @@ a:not([class]) {
 /* Make images easier to work with */
 img,
 picture {
-  max-width: 100%;
+  width: 100%;
   display: block;
 }
 /* Inherit fonts for inputs and buttons */
@@ -178,7 +178,8 @@ a:hover{
     max-height: 200px;
 } 
 .nav-brand img{
-        max-height: 80px;
+        height: 80px;
+        width: auto;
     } 
 .nav-brand a{
         text-decoration: none;
@@ -552,159 +553,6 @@ footer ul{
   background-image: url("../../assets/img/hero/index-hero.jpg");
 
 } 
-/*/thumbnails*/ 
-.thumbnails{
-  width: auto;
-  margin: 0 auto;
-  overflow-x: auto;
-  display: flex;
-} 
-.thumbnails img{
-    height: 150px;
-  } 
-.thumbnails::-webkit-scrollbar{ /*defines scrollbar width*/
-  width: 2px;
-  
-} 
-/* The Modal (background) */ 
-.modal {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 100;
-    opacity: 0;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 50px 1fr auto;
-    pointer-events: none;
-    transition: opacity 300ms ease-out;
-    background-color: rgba(0, 0, 0, 0.95);
-  } 
-.modal-active{
-    opacity: 1;
-    pointer-events: all;
-  } 
-/* Modal Content */ 
-.modal-content {
-    position: relative;
-    padding: 0;
-    width: 90%;
-    margin: 0 auto;
-    max-width: 1200px;
-    height: 100%;
-
-  } 
-/* The Close Button */ 
-.modal-close {
-    color: white;
-    justify-self: right;
-    font-size: 35px;
-    font-weight: bold;
-    margin-right: 20px;
-  } 
-.close:hover,
-  .close:focus {
-    color: #999;
-    text-decoration: none;
-    cursor: pointer;
-  } 
-/* Hide the slides by default */ 
-.mySlides {
-    display: none;
-    height: 100%;
-
-  } 
-/*Slide body*/ 
-.slide-body{
-    height: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
-    align-items: center;
-    grid-template-rows: 1fr 50px;
-  } 
-.slide-body-img{
-    justify-self: center;
-  } 
-.slide-body-img img{
-      max-height: 60vh;
-    } 
-.slide-body-caption{
-
-    padding: 1rem;
-    color: #fff;
-    background-color: rgba(0, 0, 0, 0.5);
-    width: 100%;
-  } 
-/* Next & previous buttons */ 
-.prev,
-  .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -50px;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none;
-  } 
-/* Position the "next button" to the right */ 
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  } 
-/* On hover, add a black background color with a little bit see-through */ 
-.prev:hover,
-  .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-  } 
-/* Number text (1/3 etc) */ 
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    margin-block: 15px;
-    top: 0;
-    left:0;
-  } 
-/* Caption text */ 
-.caption-container {
-    text-align: center;
-    background-color: black;
-    padding: 2px 16px;
-    color: white;
-  } 
-img.demo {
-    opacity: 0.6;
-  } 
-.active,
-  .demo:hover {
-    opacity: 1;
-  } 
-img.hover-shadow {
-    transition: 0.3s;
-  } 
-.hover-shadow:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  } 
-.gallery-img{
-    cursor: pointer;
-   
-  } 
-.gallery-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-    border-radius: 10px;
-  } 
 .gift-item-thumb{
     height: 150px;
 } 
@@ -712,11 +560,11 @@ img.hover-shadow {
     background-image: url("../../assets/img/hero/index-hero.jpg");
     color: hsl(16, 24%, 95%);
 } 
-.std-card.index-img img{
-    width: 100%;
- 
-    border-radius: 5px;
-   } 
+.home-gallery{
+   display: grid;
+   gap: 0.25rem;
+   grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+} 
 .rsvp-card{
     width: 80%;
     margin: 0 auto;
@@ -747,6 +595,10 @@ img.hover-shadow {
 .grid-col{ /*standard grid column to hold items together*/
     width: 100%;
 } 
+.grid-col img{
+        object-fit: cover;
+        object-position: top;
+    } 
 @media(min-width:768px){
 /*align items to left on larger screens*/
 .grid-col-left{
@@ -793,7 +645,6 @@ img.hover-shadow {
 .grid-row-3col{/*grid row with 3 columns of equal width*/
     display: grid;
     gap: 1.5rem;
-    place-items: center;
 } 
 @media(min-width:768px){ 
 .grid-row-3col{
@@ -804,6 +655,13 @@ img.hover-shadow {
 /*Utility classes for grid */ 
 .place-grid-start{/*places a grid item at the top of a grid row*/
     place-self: start;
+} 
+.img-grid-auto{ /*auto grid small columns*/
+    display: grid;
+    gap: 0.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: minmax(100px, auto);
+    align-items: center;
 } 
 .grid-auto-sm{ /*auto grid small columns*/
     display: grid;
@@ -1309,13 +1167,31 @@ input:checked + .slider:before {
     
 }
     }
-/*image card with glass border*/
+/*image card wwith a caption inside the image*/
 .img-card{
-    padding: 1rem;
-    background-color: hsla(0, 0%, 96%, 0.509);
-    -webkit-backdrop-filter: blur(10px);
-            backdrop-filter: blur(10px);
-    border: 1px solid hsl(16, 24%, 54%);
+    border-radius: 20px;
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+    
+    border: 2px solid hsl(16, 24%, 54%);
+}
+.img-card img{
+        height: 100%;
+        object-fit: cover;
+    }
+.img-card-caption{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-inline: auto;
+    padding: 0.5rem;
+    text-align: center;
+    font-size: 1.25rem;
+    background-color: rgba(255, 255, 255, 0.25);
+    -webkit-backdrop-filter: blur(3px);
+            backdrop-filter: blur(3px);
 }
 /*standard card with basic padding and a simple border*/
 .std-card{ /*use for making a card section*/
@@ -1359,7 +1235,9 @@ input:checked + .slider:before {
 /*/staff cards*/
 .staff-card{
     padding: 0.5rem;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 .staff-card-header img{
@@ -1583,6 +1461,20 @@ input:checked + .slider:before {
     .return{
         bottom: 92px;
     }
+}
+.slide img{
+  max-height: 35vh;
+  object-fit: cover;
+  object-position: top;
+}
+.slide{
+  max-height: inherit;
+}
+@media(min-width: 768px){
+  .slide img{
+    max-height: 60vh;
+    object-position: center;
+  }
 }
 /*spacing utilities*/
 /*m = margin*/
