--- a/scss/abstracts/_reset.scss
+++ b/scss/abstracts/_reset.scss
@@ -45,7 +45,7 @@ a:not([class]) {
 /* Make images easier to work with */
 img,
 picture {
-  max-width: 100%;
+  width: 100%;
   display: block;
 }
 
