--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -1,11 +1,27 @@
-
-
-//image card with glass border
+//image card wwith a caption inside the image
 .img-card{
-    padding: 1rem;
-    background-color: hsla(0, 0%, 96%, 0.509);
-    backdrop-filter: blur(10px);
-    border: 1px solid $primary;
+    border-radius: $border-radius;
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+    
+    border: 2px solid $primary;
+    img{
+        height: 100%;
+        object-fit: cover;
+    }
+}
+.img-card-caption{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-inline: auto;
+    padding: $spacer-2;
+    text-align: center;
+    font-size: $fs-125;
+    background-color: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(3px);
 }
 //standard card with basic padding and a simple border
 
@@ -55,7 +71,9 @@
 ///staff cards
 .staff-card{
     padding: $spacer-2;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 .staff-card-header img{
