--- a/scss/layouts/grid/_cssgrid.scss
+++ b/scss/layouts/grid/_cssgrid.scss
@@ -15,7 +15,6 @@
 .grid-row-3col{//grid row with 3 columns of equal width
     display: grid;
     gap: $spacer-3;
-    place-items: center;
     @media(min-width:$md){
         grid-template-columns: repeat(3, 1fr);
         grid-auto-rows: minmax(100px, auto);
@@ -26,7 +25,13 @@
 .place-grid-start{//places a grid item at the top of a grid row
     place-self: start;
 }
-
+.img-grid-auto{ //auto grid small columns
+    display: grid;
+    gap: $spacer-2;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: minmax(100px, auto);
+    align-items: center;
+}
 .grid-auto-sm{ //auto grid small columns
     display: grid;
     gap: $spacer-1;
