--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -113,6 +113,34 @@ h1, h2, h3, h4{
     font-size: 1.5rem;
     font-weight: 200;
 }
+/*speech bubble to draw attention to a quote*/
+.speech-bubble{
+    background-color: hsl(16, 24%, 80%);
+    padding: 1.5rem;
+    border-radius: 10px;
+    position: relative;
+    filter: drop-shadow(4px 4px 3px rgba(164, 164, 164, 0.662));
+}
+.speech-bubble:after {
+	content: '';
+    position: absolute;
+    display: block;
+    bottom: -16px;
+    left: 0;
+    width: 0;
+    border-style: solid;
+    border-width: 32px 32px 0 0;
+    border-color: hsl(16, 24%, 80%) transparent transparent transparent;
+
+
+}
+@media(min-width: 768px){
+    .speech-bubble{
+        width: 50%;
+        margin-inline: auto;
+        
+    }
+}
 body{
     /*  display: flex;*/
     /*  flex-direction: column;*/
@@ -197,6 +225,7 @@ a:hover{
     top: 166px;
     left: 0;
     right: 0;
+    z-index: 1000;
     margin: 0;
     padding: 0;
     padding: 1.5rem;
@@ -373,58 +402,56 @@ footer ul{
     }
 } 
 .hero {
-    height: clamp(60vh, 60vw, 500px);
-    padding-block: 10vw;
+    padding-block: 25vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     color: #F2F2F2;
+    background-color: hsl(0, 7.2%, 81%);
+    background-blend-mode: multiply;
     display: grid;
     position: relative;
     place-items: center;
     z-index: 1;
-} 
-.hero::after{
-        content: "";
-        position: absolute;
-        bottom: 0px;
-        height: 125px;
-        width: 100%;
-        background: #ffffff;
-        -webkit-mask-image: url(../../assets/img/icons/cloud.svg);
-        mask-image: url(../../assets/img/icons/cloud.svg);
-        filter: drop-shadow(0rem 4px 9px rgba(45, 4, 4, 0.8));
-        z-index: 0;
 
-    } 
-.hero-container{
+} 
+.hero-container {
     padding-inline: 1.5rem;
     z-index: 3;
 } 
 .hero-title {
- 
-        font-size: 2.5rem;
-        font-weight: 400;
-        color: #F2F2F2;
-        text-shadow: 2px 2px hsla(0, 0%, 0%, 0.25);
-        
-
-
+    font-size: 2.5rem;
+    font-weight: 400;
+    color: #F2F2F2;
+    text-shadow: 2px 2px hsla(0, 0%, 0%, 0.25);
 } 
-.hero-subtitle{
+.hero-subtitle {
     font-size: 1.25rem;
     font-family: 'Jua', sans-serif;
 } 
 .index-hero {
-    background-image: url("../../assets/img/hero/index-hero.jpg");
+    background-image: url("../../assets/img/hero/index-hero-sm.jpg");
 
 } 
-.hero-title{
+@media(min-width:768px) {
+    .index-hero {
+        background-image: url("../../assets/img/hero/index-hero-med.jpg");
+
+    }
+} 
+@media(min-width:992px) {
+    .index-hero {
+        background-image: url("../../assets/img/hero/index-hero-lg.jpg");
+
+    }
+} 
+/*set up bg images depending on screen size*/ 
+.hero-title {
     place-self: left;
 } 
-@media(min-width: 768px){
+@media(min-width: 768px) {
 
-    .hero-container{
+    .hero-container {
         width: 65%;
     }
 } 
@@ -1476,6 +1503,22 @@ input:checked + .slider:before {
     object-position: center;
   }
 }
+.opening-hrs{
+    width: 100%;
+    padding: 0;
+    max-width: 300px;
+
+}
+.opening-hrs li{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        border-bottom: 1px solid hsl(16, 24%, 80%);
+    }
+.opening-hrs li.opening-hrs-time{
+        flex-grow: 1;
+     
+    }
 /*spacing utilities*/
 /*m = margin*/
 /*p = padding*/
@@ -1549,6 +1592,9 @@ input:checked + .slider:before {
 .border-std{/*place a border radius std on all the site*/
     border-radius: 20px;
 }
+.border-std-2{
+    border-radius: 10px;
+}
 /*Font colours*/
 /*Change default font to primary colour*/
 .text-color-primary{
@@ -1583,5 +1629,8 @@ input:checked + .slider:before {
 /*text utility classes*/
 .wrap-words{
     word-wrap: anywhere;
+}
+.italics{
+    font-style: italic;
 }
 /*# sourceMappingURL=styles.css.map */
