--- a/scss/components/_lists.scss
+++ b/scss/components/_lists.scss
@@ -1,4 +1,4 @@
-.opening-hrs{
+.opening-hrs, .committee-list{
     width: 100%;
     padding: 0;
     max-width: 300px;
@@ -13,8 +13,4 @@
      
     }
 
-}
-
-.contact-details{
-    
 }
