--- a/scss/components/_tables.scss
+++ b/scss/components/_tables.scss
@@ -1,10 +1,24 @@
 .std-table{//standard table settings
     width: 100%;
     margin-bottom: $spacer-3;
+    border-collapse: collapse;
     th{
         text-align: left;
+        font-weight: 800;
+        padding: $spacer-2;
+        background-color: $primary;
+        color: $secondary;
+        &:first-of-type{
+            border-top-left-radius: $border-radius-2;
+            
+        }
+        &:last-of-type{
+            border-top-right-radius: $border-radius-2;
+        }
+        
     }
     td{
+        padding: $spacer-2;
         border-bottom: 1px solid $primary;
     }
     tr:nth-child(even){
