--- a/scss/components/_btn.scss
+++ b/scss/components/_btn.scss
@@ -46,8 +46,6 @@ a.btn-primary{
         transition: box-shadow 300ms ease-out;
     }
 }
-
-
 .btn-close{//close button
     border: 0;
     border-radius: .375rem;
@@ -62,6 +60,9 @@ a.btn-primary{
     }
     svg{
         height: 100%;
+        path{
+            fill: black;
+        }
     }
 }
 .alert{
