--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -553,7 +553,7 @@ footer ul{
     display: flex;
     justify-content: space-between;
 } 
-.header-contact a{
+.header a{
         color: #F2F2F2;
     } 
 .header-contact svg{
@@ -828,6 +828,9 @@ a.btn-primary{
 .btn-close svg{
         height: 100%;
     }
+.btn-close svg path{
+            fill: black;
+        }
 .alert{
     /*/Alert button for buttons to draw attention*/
     background-color: hsl(0, 95%, 67%);
@@ -1288,19 +1291,22 @@ input:checked + .slider:before {
     }
 /*larger card for staff pages*/
 .staff-card-lg{
-    display: grid;
-
     padding: 0.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+.staff-card-lg .staff-card-header{
+        width: 100%;
+
+    }
 .staff-card-lg .staff-card-header img{
         height: 250px;
-        width: 250px;
+        width: 100%;
         object-fit: cover;
         object-position: top;
-        border-radius: 10px;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
     }
 .staff-card-lg .staff-card-name{
         font-size: 1.25rem;
@@ -1313,7 +1319,8 @@ input:checked + .slider:before {
 .staff-card-lg .staff-card-body{
         background-color: hsl(16, 24%, 90%);
         padding: 1.5rem;
-        border-radius: 10px;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
     }
 /*short intro card to the couples story*/
 .staff-card-lg .staff-card-text{
@@ -1338,16 +1345,9 @@ input:checked + .slider:before {
     top: 0;
     left: 0;
     right: 0;
-    height: 100svh;
+    height: 100%;
     z-index: 1000;
 }
-.staff-card-modal .staff-card-header img{
-        height: 250px;
-        width: 250px;
-        object-fit: cover;
-        object-position: top;
-        border-radius: 10px;
-    }
 .staff-card-modal .staff-card-name{
         font-size: 1.25rem;
         font-family: 'Jua', sans-serif;
@@ -1370,9 +1370,7 @@ input:checked + .slider:before {
 
 }
 @media(min-width:768px){
-    .staff-card-lg{
-        grid-template-columns: 1fr 1fr;
-    }
+
     .staff-card-modal-body{
         width: 80%;
         margin-inline: auto;
