--- a/scss/components/_return.scss
+++ b/scss/components/_return.scss
@@ -9,7 +9,7 @@
     display: grid;
     place-items: center;
     border-radius: $border-radius-2;
-    background-color: $primary-900;
+    background-color: $primary-500;
     border: 1px solid $primary;
     opacity: 0;
     animation: return 5s ease infinite;
@@ -18,7 +18,7 @@
     svg{
         height: 100%;
         path{
-            fill: $primary;
+            fill: $primary-900;
         }
     }
 }
