--- a/scss/layouts/sections/_footer.scss
+++ b/scss/layouts/sections/_footer.scss
@@ -42,3 +42,16 @@ footer{
         justify-content: space-between;
     }
 }
+.footer-request{
+    position: relative;
+}
+.footer-col-response{
+    display: none;
+    background-color: rgb(255, 255, 255);
+    max-width: 250px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
