--- a/scss/components/_btn.scss
+++ b/scss/components/_btn.scss
@@ -1,10 +1,10 @@
 .btn-primary {//primary button
     outline: none;
     appearance: none;
-    background-color: $primary-500;
+    background-color: $primary;
     color: #fff;
     font-family: $font-family-sans-serif;
-    border: 1.5px solid $primary-500;
+    border: 1.5px solid $primary;
     border-radius: $border-radius-2;
     padding: .375rem .75rem;
     transition: box-shadow 300ms ease-out;
