--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,5 +1,5 @@
 //Colours
-$primary:       hsl(16, 19%, 38%);
+$primary:       #73584e;
 $secondary:     #F2F2F2;
 $tertiary-col:  #71736A;
 $white: #f2f2;
