Refactor code structure for improved readability and maintainability

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1763,4 +1763,7 @@ input:checked + .slider:before {
 .italics{
     font-style: italic;
 }
+.ob-fit-cover{
+    object-fit: cover;
+}
 /*# sourceMappingURL=styles.css.map */
